--- a/index.html
+++ b/index.html
@@ -47,12 +47,17 @@ header h3{font-size:18px;}
   text-align:center;
   font-weight:800;
   cursor:pointer;
+  transition:.3s;
 }
 .navBox.active,
 .navBox:hover{background:rgba(255,255,255,.45);}
 
 /* PAGES */
-.page{display:none;flex-direction:column;padding:14px;}
+.page{
+  display:none;
+  flex-direction:column;
+  padding:14px;
+}
 .page.active{display:flex;}
 
 /* CARD */
@@ -62,18 +67,37 @@ header h3{font-size:18px;}
   padding:20px;
   margin-bottom:16px;
 }
+.card h3{margin-bottom:12px;}
+
+/* INPUT */
+input,select,button{
+  width:100%;
+  padding:14px;
+  border-radius:16px;
+  border:none;
+  font-size:15px;
+}
+button{
+  background:#38bdf8;
+  font-weight:700;
+  margin-top:10px;
+  cursor:pointer;
+}
+button:hover{background:#0ea5e9}
 
 /* TASKS */
 .task{
   display:flex;
   justify-content:space-between;
+  align-items:center;
   background:rgba(255,255,255,.3);
   padding:12px;
   border-radius:14px;
   margin-top:8px;
 }
+.trash{cursor:pointer;font-size:18px;}
 
-/* CHAT */
+/* IA CHAT */
 #chatContainer{
   height:55vh;
   overflow-y:auto;
@@ -88,10 +112,17 @@ header h3{font-size:18px;}
   margin:6px 0;
   white-space:pre-line;
 }
-.userMsg{background:#38bdf8;color:black;margin-left:auto;}
-.iaMsg{background:#22c55e;color:black;}
+.userMsg{
+  background:#38bdf8;
+  color:black;
+  margin-left:auto;
+}
+.iaMsg{
+  background:#22c55e;
+  color:black;
+}
 
-/* IA INPUT STYLE CHATGPT */
+/* IA INPUT BARRE STYLE CAPTURE */
 #iaInputArea{
   display:flex;
   align-items:center;
@@ -101,7 +132,6 @@ header h3{font-size:18px;}
   border-radius:30px;
   padding:8px;
 }
-
 #iaInput{
   flex:1;
   background:transparent;
@@ -110,8 +140,6 @@ header h3{font-size:18px;}
   font-size:15px;
   outline:none;
 }
-
-/* ICON BUTTONS */
 .iconBtn{
   width:42px;
   height:42px;
@@ -121,11 +149,10 @@ header h3{font-size:18px;}
   align-items:center;
   justify-content:center;
   cursor:pointer;
-  transition:0.2s;
 }
-.iconBtn:hover{transform:scale(1.1);}
 .iconBtn svg{width:22px;height:22px;fill:white;}
 
+/* FOOTER */
 footer{
   margin-top:auto;
   padding:8px 14px;
@@ -152,7 +179,7 @@ footer{
 <!-- ACCUEIL -->
 <div id="home" class="page active">
   <div class="card">
-    <h3>Couleur</h3>
+    <h3>🎨 Couleur</h3>
     <select id="colorSelect">
       <option value="#064e3b">Vert</option>
       <option value="#3b82f6">Bleu</option>
@@ -164,7 +191,7 @@ footer{
   </div>
 
   <div class="card">
-    <h3>Langue</h3>
+    <h3>🌍 Langue</h3>
     <select>
       <option>Français</option>
       <option>Anglais</option>
@@ -174,7 +201,7 @@ footer{
   </div>
 
   <div class="card">
-    <h3>Tâches</h3>
+    <h3>✅ Tâches</h3>
     <input id="taskInput" placeholder="Nouvelle tâche">
     <button onclick="addTask()">Ajouter</button>
     <div id="taskList"></div>
@@ -183,41 +210,45 @@ footer{
 
 <!-- IA -->
 <div id="ia" class="page">
+
   <div id="chatContainer"></div>
 
+  <!-- INTERFACE BAS (MODIFIÉE UNIQUEMENT) -->
   <div id="iaInputArea">
-
-    <!-- PLUS IMAGE -->
-    <div class="iconBtn" onclick="fileInput.click()" title="Image">
-      <svg viewBox="0 0 24 24"><path d="M19 11H13V5h-2v6H5v2h6v6h2v-6h6z"/></svg>
+    <!-- Plus -->
+    <div class="iconBtn" onclick="fileInput.click()" title="Ajouter image">
+      <svg viewBox="0 0 24 24">
+        <path d="M19 11H13V5h-2v6H5v2h6v6h2v-6h6z"/>
+      </svg>
     </div>
 
-    <!-- INPUT -->
+    <!-- Texte -->
     <input id="iaInput" placeholder="Écris un message…">
 
-    <!-- MICRO -->
-    <div class="iconBtn" onclick="toggleVoice()" title="Parler">
+    <!-- Micro -->
+    <div class="iconBtn" onclick="startVoice()" title="Parler">
       <svg viewBox="0 0 24 24">
         <path d="M12 14a3 3 0 003-3V5a3 3 0 00-6 0v6a3 3 0 003 3z"/>
         <path d="M5 10v2a7 7 0 0014 0v-2h-2v2a5 5 0 01-10 0v-2H5z"/>
       </svg>
     </div>
 
-    <!-- ENVOI -->
+    <!-- Envoyer -->
     <div class="iconBtn" onclick="askIA()" title="Envoyer">
-      <svg viewBox="0 0 24 24"><path d="M2 21l21-9L2 3v7l15 2-15 2z"/></svg>
+      <svg viewBox="0 0 24 24">
+        <path d="M2 21l21-9L2 3v7l15 2-15 2z"/>
+      </svg>
     </div>
-
   </div>
 
-  <input type="file" id="fileInput" accept="image/*" capture="environment" hidden>
+  <input type="file" id="fileInput" accept="image/*" hidden>
 
 </div>
 
 <!-- PROMO -->
 <div id="promo" class="page">
   <div class="card">
-    <h3>Code Promo</h3>
+    <h3>🎁 Code Promo</h3>
     <input id="promoInput" placeholder="Entre ton code">
     <button onclick="validatePromo()">Valider</button>
     <div id="promoResult"></div>
@@ -227,7 +258,6 @@ footer{
 <footer>© 2026 Daily Life Ultra IA ⚡</footer>
 
 <script>
-
 // TIME
 setInterval(()=>time.textContent=new Date().toLocaleTimeString(),1000);
 
@@ -256,7 +286,7 @@ let tasks=JSON.parse(localStorage.getItem("tasks")||"[]");
 function renderTasks(){
   taskList.innerHTML="";
   tasks.forEach((t,i)=>{
-    taskList.innerHTML+=`<div class="task">${t}<span onclick="delTask(${i})">🗑️</span></div>`;
+    taskList.innerHTML+=`<div class="task"><span>${t}</span><span class="trash" onclick="delTask(${i})">🗑️</span></div>`;
   });
 }
 function addTask(){
@@ -273,62 +303,46 @@ function delTask(i){
 }
 renderTasks();
 
-// IA
+// IA TEXTE
 function askIA(){
   const q=iaInput.value.trim();
   if(!q)return;
-
-  // Message utilisateur
   chatContainer.innerHTML+=`<div class="message userMsg">${q}</div>`;
-
-  // Réponse IA
-  let r="Je réfléchis à ton message.";
-  chatContainer.innerHTML+=`<div class="message iaMsg">${r}</div>`;
-  chatContainer.scrollTop=chatContainer.scrollHeight;
-
-  // Voix IA
-  const speech=new SpeechSynthesisUtterance(r);
-  speech.lang='fr-FR';
-  speechSynthesis.speak(speech);
-
+  const reply="Tu as dit : " + q;
+  chatContainer.innerHTML+=`<div class="message iaMsg">${reply}</div>`;
+  speak(reply);
   iaInput.value="";
+  chatContainer.scrollTop=chatContainer.scrollHeight;
+}
+
+// IA VOIX → TEXTE
+function startVoice(){
+  const rec = new(window.SpeechRecognition||window.webkitSpeechRecognition)();
+  rec.lang="fr-FR";
+  rec.start();
+  rec.onresult=e=>{
+    const text=e.results[0][0].transcript;
+    iaInput.value=text;
+    askIA();
+  };
+}
+
+// IA VOIX → PAROLE
+function speak(text){
+  const u=new SpeechSynthesisUtterance(text);
+  u.lang="fr-FR";
+  speechSynthesis.speak(u);
 }
 
 // IMAGE
 fileInput.onchange=e=>{
   const file=e.target.files[0];
   if(!file)return;
-
-  // Afficher l'image envoyée
-  const imgURL = URL.createObjectURL(file);
-  chatContainer.innerHTML+=`<div class="message userMsg"><img src="${imgURL}" style="max-width:100%;border-radius:12px;"></div>`;
-  chatContainer.scrollTop=chatContainer.scrollHeight;
-}
-
-// VOCAL CONTINU
-let recognition;
-let listening=false;
-
-function toggleVoice(){
-  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-  if(!SpeechRecognition){alert("Vocal non supporté");return;}
-
-  if(!listening){
-    recognition=new SpeechRecognition();
-    recognition.lang='fr-FR';
-    recognition.continuous=true;
-    recognition.start();
-    listening=true;
-
-    recognition.onresult=e=>{
-      iaInput.value=e.results[e.results.length-1][0].transcript;
-    };
-
-  }else{
-    recognition.stop();
-    listening=false;
-    askIA();
-  }
+  const reader=new FileReader();
+  reader.onload=ev=>{
+    chatContainer.innerHTML+=`<div class="message userMsg"><img src="${ev.target.result}" style="max-width:100%;border-radius:12px"></div>`;
+  };
+  reader.readAsDataURL(file);
 }
 
 // PROMO
@@ -341,4 +355,4 @@ function validatePromo(){
 </script>
 
 </body>
-      </html>
+                  </html>
