--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Daily Life Ultra IA</title>
-
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui;}
 body{
@@ -111,7 +110,6 @@ button:hover{background:#0ea5e9}
   border-radius:18px;
   margin:6px 0;
   white-space:pre-line;
-  transition:.3s;
 }
 .userMsg{
   background:#38bdf8;
@@ -148,7 +146,7 @@ button:hover{background:#0ea5e9}
   width:46px;
   height:46px;
   border-radius:50%;
-  background:#ef4444; /* 100% roux */
+  background:#f97316; /* 100% roux */
   display:flex;
   align-items:center;
   justify-content:center;
@@ -157,38 +155,15 @@ button:hover{background:#0ea5e9}
   color:black;
   transition:.2s;
 }
+.iconBtn.active{animation:blink 1s infinite;}
+.iconBtn:hover{background:#fb923c}
 
-/* MICRO ANIMATION */
-.micActive{
-  box-shadow:0 0 20px #f87171;
+@keyframes blink{
+  0%,100%{transform:scale(1);}
+  50%{transform:scale(1.1);}
 }
 
-/* VOIX MENU SLIDER */
-#voiceSlider{
-  position:absolute;
-  bottom:70px;
-  left:50%;
-  transform:translateX(-50%);
-  display:none;
-  background:rgba(0,0,0,.8);
-  border-radius:18px;
-  padding:10px 14px;
-  color:white;
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-#voiceSlider span{
-  font-weight:700;
-  cursor:pointer;
-  padding:6px 12px;
-  border-radius:14px;
-  background:#38bdf8;
-  user-select:none;
-}
-#voiceSlider span.active{
-  background:#0ea5e9;
-}
+#fileInput{display:none}
 
 /* FOOTER */
 footer{
@@ -248,22 +223,14 @@ footer{
 
 <!-- IA -->
 <div id="ia" class="page">
-
   <div id="chatContainer"></div>
 
   <div id="iaInputArea">
-    <div class="iconBtn" id="addBtn" onclick="fileInput.click()">+</div>
+    <div class="iconBtn" onclick="fileInput.click()">+</div>
     <input id="iaInput" placeholder="Écris un message…">
-    <div class="iconBtn" id="micBtn" onclick="toggleVoiceSlider()">🎤</div>
+    <div class="iconBtn" id="voiceBtn" onclick="toggleVoice()">🎤</div>
     <div class="iconBtn" onclick="askIA()">⬆</div>
     <input type="file" id="fileInput" accept="image/*">
-  </div>
-
-  <!-- VOIX SLIDER -->
-  <div id="voiceSlider">
-    <span data-voice="female">Femme</span>
-    <span data-voice="male">Homme</span>
-    <span data-voice="chatgpt" class="active">ChatGPT</span>
   </div>
 </div>
 
@@ -329,90 +296,56 @@ function delTask(i){
 }
 renderTasks();
 
-// IA VARIABLES
-let selectedVoice = 'chatgpt';
+// VOIX
+let recognition;
 let listening = false;
-let audioContext, analyser, microphone, dataArray;
 
-// VOIX SLIDER
-function toggleVoiceSlider(){
-  const slider = document.getElementById('voiceSlider');
-  slider.style.display = slider.style.display==='flex'?'none':'flex';
+function toggleVoice() {
+  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  if (!SpeechRecognition) { alert("Vocal non supporté"); return; }
+
+  const voiceBtn = document.getElementById("voiceBtn");
+
+  if (!listening) {
+    recognition = new SpeechRecognition();
+    recognition.lang = 'fr-FR';
+    recognition.continuous = false;
+    recognition.start();
+    listening = true;
+    voiceBtn.classList.add("active");
+
+    // Choix voix pour la première fois
+    let voiceType = prompt("Choisissez une voix : Femme / Homme / ChatGPT", "Femme");
+
+    recognition.onresult = e => {
+      const text = e.results[0][0].transcript;
+      iaInput.value = text;
+      const reply = generateAIReply(text);
+      speak(reply, voiceType);
+      iaInput.value = "";
+    };
+
+    recognition.onend = () => { listening = false; voiceBtn.classList.remove("active"); };
+  } else {
+    recognition.stop();
+    listening = false;
+    voiceBtn.classList.remove("active");
+  }
 }
 
-document.querySelectorAll('#voiceSlider span').forEach(el=>{
-  el.onclick=()=>{
-    document.querySelectorAll('#voiceSlider span').forEach(e=>e.classList.remove('active'));
-    el.classList.add('active');
-    selectedVoice = el.dataset.voice;
-    document.getElementById('voiceSlider').style.display='none';
-    if(!listening) startVoice();
-  }
-});
-
-// IA TEXTE → VOIX
 function askIA() {
-  const q = iaInput.value.trim();
-  if(!q) return;
-  showSpeakingBubble(simulateAIResponse(q));
-  iaInput.value="";
-}
+  const text = iaInput.value.trim();
+  if(!text) return;
 
-// IA VOIX → PAROLE + VISUAL
-async function startVoice(){
-  if(listening) return;
-  listening=true;
-  const micBtn = document.getElementById('micBtn');
-  micBtn.classList.add('micActive');
+  const reply = generateAIReply(text);
+  // Voix par défaut ChatGPT
+  speak(reply, "ChatGPT");
 
-  try{
-    const stream = await navigator.mediaDevices.getUserMedia({audio:true});
-    audioContext = new AudioContext();
-    analyser = audioContext.createAnalyser();
-    microphone = audioContext.createMediaStreamSource(stream);
-    microphone.connect(analyser);
-    analyser.fftSize=256;
-    dataArray = new Uint8Array(analyser.frequencyBinCount);
-
-    function visualize(){
-      if(!listening) return;
-      analyser.getByteFrequencyData(dataArray);
-      const volume = dataArray.reduce((a,b)=>a+b)/dataArray.length/255;
-      micBtn.style.transform = `scale(${1+volume/2})`;
-      requestAnimationFrame(visualize);
-    }
-    visualize();
-  }catch(e){
-    console.error(e);
-  }
-
-  const recognition = new (window.SpeechRecognition||window.webkitSpeechRecognition)();
-  recognition.lang='fr-FR';
-  recognition.continuous=true;
-  recognition.start();
-
-  recognition.onresult = e => {
-    const text = e.results[e.results.length-1][0].transcript;
-    iaInput.value=text;
-    showSpeakingBubble(simulateAIResponse(text));
-    iaInput.value="";
-  };
-
-  recognition.onend = ()=>{micBtn.classList.remove('micActive'); micBtn.style.transform='scale(1)'; listening=false;}
-}
-
-// IA PULSE VISUELLE
-function showSpeakingBubble(text){
-  const msg = document.createElement('div');
-  msg.className='message iaMsg';
-  msg.textContent=text;
-  chatContainer.appendChild(msg);
-  chatContainer.scrollTop=chatContainer.scrollHeight;
-  speak(text);
+  iaInput.value = "";
 }
 
 // SIMULATION IA
-function simulateAIResponse(question){
+function generateAIReply(question) {
   if(question.toLowerCase().includes("h")) return "Salut ! Comment ça va ?";
   if(question.toLowerCase().includes("bonjour")) return "Bonjour ! Je suis là pour t'aider.";
   if(question.toLowerCase().includes("comment")) return "Je vais très bien, merci !";
@@ -420,24 +353,30 @@ function simulateAIResponse(question){
 }
 
 // SPEAK
-function speak(text){
-  const u=new SpeechSynthesisUtterance(text);
-  u.lang='fr-FR';
+function speak(text, type="Femme") {
+  const utter = new SpeechSynthesisUtterance(text);
+  utter.lang = 'fr-FR';
   const voices = speechSynthesis.getVoices();
-  if(selectedVoice==='female'){
-    const v = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('female'));
-    if(v) u.voice=v;
-  }else if(selectedVoice==='male'){
-    const v = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('male'));
-    if(v) u.voice=v;
+
+  if(type.toLowerCase() === "homme") {
+    const male = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('male'));
+    if(male) utter.voice = male;
+  } else if(type.toLowerCase() === "chatgpt") {
+    const chatgptVoice = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('samantha'));
+    if(chatgptVoice) utter.voice = chatgptVoice;
+  } else {
+    const female = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('female'));
+    if(female) utter.voice = female;
   }
-  speechSynthesis.speak(u);
+
+  speechSynthesis.speak(utter);
 }
 
 // IMAGE
 fileInput.onchange=e=>{
   const file=e.target.files[0];
   if(!file) return;
+
   const reader=new FileReader();
   reader.onload=ev=>{
     chatContainer.innerHTML+=`
@@ -456,6 +395,5 @@ function validatePromo(){
     : "Code invalide";
 }
 </script>
-
 </body>
   </html>
